# LensX

./: .gitignore  CMakeLists.txt  README.md
docs/: for_resume_ai.md
libbpf/: CMakeLists.txt
src/: bpf_gen.cpp  bpf_gen.h  config.cpp  config.h  lensx.cpp  matcher.cpp  matcher.h
test/: README.md  c_test.c  c_test_key.yaml  config_full.yaml  io_uring_key.yaml  io_uring_test.c  kretprobe_test.c  kretprobe_test.yaml  nebulaX.yaml  redis.yaml
test/results/: c_test.csv  c_test.txt  io_uring.csv  io_uring.txt  kretprobe.txt  nebulaX.csv  nebulaX.txt  redis.csv  redis.txt
